--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Pos.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Pos.cshtml
@@ -1,3 +1,3 @@
-﻿@using (Html.BeginFormAntiForgeryPost(Url.Action("CheckoutStart", "Checkout", new { area = "Laser.Orchard.NwazetIntegration" }))) {
+﻿@using (Html.BeginFormAntiForgeryPost(Url.Action("Index", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" }))) {
     <button type="submit" id="payButton" style="padding: 10px 10px">@T("Checkout")</button>
 }
