Store phone number for checkout. Setting to make it required.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/CheckoutSettings.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/CheckoutSettings.cshtml
@@ -8,3 +8,12 @@
         </label>
     </div>
 </div>
+
+<div class="form-group">
+    <div class="checkbox-inline">
+        <label>
+            @Html.CheckBoxFor(m => m.PhoneIsRequired)
+            @T("A phone number is required for checkout.")
+        </label>
+    </div>
+</div>
