--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/ProductPriceWithVATEditor.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/ProductPriceWithVATEditor.cshtml
@@ -5,6 +5,8 @@
         ? T("Base prices are computed using VAT __RATE__% from the selected category.").Text
         : T("Base prices are computed using VAT __RATE__% from the selected category and for the selected default region ({0}).", Model.DefaultTerritoryName).Text;
 
+    var beforeVatText = T("Before VAT: __PRICE__");
+
     var initialRate = Model.VatRates[Model.DefaultVatConfigurationId];
     if (Model.SelectedVatConfigurationId > 0) {
         initialRate = Model.VatRates[Model.SelectedVatConfigurationId];
@@ -25,47 +27,29 @@
     </small>
     <fieldset id="@regularFieldsetGuid">
         <div class="form-group">
-            <label>@T("Regular price")</label>
-            <div class="form-group col-md-4">
-                <label>@T("Before VAT")</label>
-                <input class="form-control"
-                       type="text"
-                       id="@regularTaxableGuid"
-                       value="@Model.BasePrice"
-                       disabled>
-            </div>
-            <div class="form-group col-md-8">
-                <label>@T("After VAT")</label>
-                <input class="form-control"
-                       type="text"
-                       id="@regularTaxedGuid"
-                       value="@(Model.BasePrice * (1m+initialRate))">
-            </div>
+            <label>@T("Regular price (after VAT)")</label>
+            <input class="form-control"
+                   type="text"
+                   id="@regularTaxedGuid"
+                   value="@(Model.BaseTaxedPrice)">
+
+            <small class="form-text text-muted" id="@regularTaxableGuid">
+                
+            </small>
         </div>
     </fieldset>
     <fieldset id="@discountFieldsetGuid">
         <div class="form-group">
-            <label>@T("Discounted Price")</label>
+            <label>@T("Discounted Price (after VAT)")</label>
+            <input class="form-control"
+                   type="text"
+                   id="@discountTaxedGuid"
+                   value="@(Model.DiscountPrice >= 0.0m ? Model.DiscountTaxedPrice.ToString() : "")">
 
-            <div class="form-group col-md-4">
-                <label>@T("Before VAT")</label>
-                <input class="form-control"
-                       type="text"
-                       id="@discountTaxableGuid"
-                       value="@(Model.DiscountPrice >= 0.0m ? Model.DiscountPrice.ToString() : "")"
-                       disabled>
-            </div>
-            <div class="form-group col-md-8">
-                <label>@T("After VAT")</label>
-                <input class="form-control"
-                       type="text"
-                       id="@discountTaxedGuid"
-                       value="@(Model.DiscountPrice >= 0.0m ? (Model.DiscountPrice * (1m+initialRate)).ToString() : "")">
-            </div>
+            <small class="form-text text-muted" id="@discountTaxableGuid">
+
+            </small>
         </div>
-        <small class="form-text text-muted">
-            @T("Leave this empty if you don't want to apply a discount. A value of 0 would represent a free product.")
-        </small>
     </fieldset>
     <small class="form-text text-muted" id="@hintGuid">
 
@@ -74,10 +58,11 @@
 
 @using(Script.Foot()) {
 
-    <script type="text/javascript">
+<script type="text/javascript">
         var hintBaseText = "@hintText";
+        var priceBaseText = "@beforeVatText";
         var rates = {};
-        
+
         @foreach(var config in Model.VatRates) {
             <text>rates[@config.Key] = @config.Value;</text>
         }
@@ -115,12 +100,27 @@
             return !isNaN(value - parseFloat(value));
         }
 
+        function ComputTaxable(value) {
+            return value / (1.0 + rate);
+            // Total price is taxable + vat
+            // t = p + v => p = t - v
+            // vat is taxable * rate
+            // v = p * r => p = v / r
+            // => t = v + v / r = v * (1 + 1 / r)
+            // => v = t / (1 + 1 / r)
+            // Then we get the actual vat by rounding at the second
+            // decimal, and finally compute p as t-v
+            //var vat = value / (1.0 + (1.0 / rate));
+            //return (value - (Math.round(vat*100.0)/100.0)).toFixed(2);
+        }
+
         function UpdateRegularPrices() {
             // regular prices
             var tPrice = regularTaxedPrice.val();
             if (TestIsFloat(tPrice)) {
-                var value = parseFloat(tPrice) / (1.0 + rate)
-                regularBasePrice.val(value);
+
+                var value = ComputTaxable(parseFloat(tPrice));
+                regularBasePrice.text(priceBaseText.replace('__PRICE__', value));
                 originalPrice.val(value);
             }
         }
@@ -129,9 +129,9 @@
             // discounted prices
             var tPrice = discountTaxedPrice.val();
             if (TestIsFloat(tPrice)) {
-                var value = parseFloat(tPrice) / (1.0 + rate)
+                var value = ComputTaxable(parseFloat(tPrice));
                 if (value < 0) {
-                    discountBasePrice.val('');
+                    discountBasePrice.text(priceBaseText.replace('__PRICE__', value));
                     discountPrice.val('');
                 } else {
                     discountBasePrice.val(value);
@@ -167,6 +167,10 @@
             UpdateDiscountedPrices()
         });
 
+        regularBasePrice.text(priceBaseText.replace('__PRICE__', @Model.BasePrice));
+        @if(Model.DiscountPrice >= 0) {
+            <text>discountBasePrice.text(priceBaseText.replace('__PRICE__', @Model.DiscountPrice));</text>
+        }
         UpdateHint();
-    </script>
+</script>
 }
