- adds workflow activity and form with some mailchimp url/payload Template - adds a site settings to store a default audience and adds a token to read it - adds a token in order to generate a subscriber hash starting from a text for example from the UserEmail {Content.UserEmail.ToMailchimpSubscriberHash} - moves Md5Hash to ApiService to Service in order to be used elsewhere id needed

--- a/src/Modules/Laser.Orchard.CommunicationGateway/Views/DefinitionTemplates/Parts/Mailchimp/MailchimpSubscriptionPartSettings.cshtml
+++ b/src/Modules/Laser.Orchard.CommunicationGateway/Views/DefinitionTemplates/Parts/Mailchimp/MailchimpSubscriptionPartSettings.cshtml
@@ -17,7 +17,7 @@
     </div>
     <div>
         @Html.LabelFor(m => m.AudienceId, T("Audiences ids"))
-        @Html.TextBoxFor(m => m.AudienceId, new { @class = "text large" })
+        @Html.TextBoxFor(m => m.AudienceId, new { @class = "text large tokenized" })
     </div>
     <div>
         @Html.LabelFor(m => m.MemberEmail, T("Member e-mail"))
