--- a/src/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml
+++ b/src/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml
@@ -14,8 +14,9 @@
     Script.Require("jQuery");
     Script.Require("jQueryUI_Core").AtHead();
     Script.Require("jQueryUI_Autocomplete").AtHead();
-    //   Script.Require("Bootstrap").AtHead();
+    Script.Require("Select2").AtHead();
     Style.Require("jQuery_Autocomplete").AtHead();
+    Style.Require("Select2").AtHead();
     Style.Require("AdvancedSearch").AtHead();
     Style.Require("FontAwesome430").AtHead();
     Style.Require("Accordion").AtHead();
@@ -33,6 +34,9 @@
 @using (Script.Head()) {
     <script type="text/javascript">
         $(document).ready(function () {
+            $('#termsResults').select2({
+                placeholder: '@T("any (show all)")'
+            });
             var aft = $("input[name=__RequestVerificationToken]:first").val();
             inputvalueignorelist = new Array('AdvancedOptions.SelectedLanguageId0', 'AdvancedOptions.SelectedOwner', 'AdvancedOptions.SelectedFromDate', 'AdvancedOptions.SelectedToDate', 'AdvancedOptions.DateFilterType0', 'AdvancedOptions.SelectedTermId0', 'AdvancedOptions.HasMediafalse');
             $('.accordion-section-content :input').each(function () {
@@ -265,9 +269,10 @@
                             @FilterActiveTag(4, @T("Not translated to: {0}", culture.ToString()).ToString());
                         }
                         @if (Model.AdvancedOptions.TaxonomiesOptions != null && Model.AdvancedOptions.TaxonomiesOptions.Count > 0) {
-                            if (Model.AdvancedOptions.SelectedTermId != 0) {
-                                var term = Model.AdvancedOptions.TermById(Model.AdvancedOptions.SelectedTermId);
-                                @FilterActiveTag(5, @T("Taxonomy term: {0}", term.ToString()).ToString());
+                            if (Model.AdvancedOptions.SelectedTermIds != null) {
+                                foreach (var term in Model.AdvancedOptions.SelectedTermIds) {
+                                    @FilterActiveTag(5, @T("Taxonomy term: {0}", term.ToString()).ToString());
+                                }
                             }
                         }
                         @{
@@ -399,19 +404,18 @@
                             @try {
                                 if (Model.AdvancedOptions.TaxonomiesOptions != null && Model.AdvancedOptions.TaxonomiesOptions.Count > 0) {
                                     <label for="termsResults" class="bulk-filter">@T("Terms")</label>
-                                    <select id="termsResults" name="AdvancedOptions.SelectedTermId">
-                                        @Html.SelectOption((string)Model.AdvancedOptions.SelectedTermId.ToString(), "0", T("any (show all)").ToString())
+                                    <select id="termsResults" name="AdvancedOptions.SelectedTermIds" multiple="multiple" style="width:100%;max-width:100%;">
                                         @{ int optgroupinserted = 0;
-                                            foreach (var languageOption in Model.AdvancedOptions.TaxonomiesOptions) {
-                                                if ((string)languageOption.Key.ToString() == "-1") {
+                                            foreach (var taxOption in Model.AdvancedOptions.TaxonomiesOptions) {
+                                                if ((string)taxOption.Key.ToString() == "-1") {
                                                     if (optgroupinserted > 0) {
                                                         Html.Raw("</optgroup>");
                                                     }
                                                     optgroupinserted = 1;
-                                                    @Html.Raw("<optgroup label=\"" + (string)languageOption.Value + "\">");
+                                                    @Html.Raw("<optgroup label=\"" + (string)taxOption.Value + "\">");
                                                 }
                                                 else {
-                                                    @Html.SelectOption((string)Model.AdvancedOptions.SelectedTermId.ToString(), (string)languageOption.Key.ToString(), (string)languageOption.Value)
+                                        <option value="@taxOption.Key.ToString()" @(Model.AdvancedOptions.SelectedTermIds!=null && Model.AdvancedOptions.SelectedTermIds.Contains(taxOption.Key)?"selected=\"selected\"":"")>@taxOption.Value</option>
                                                 }
                                             }
                                             if (optgroupinserted > 0) {
