add padding in ResultBox

--- a/src/Themes/KrakeDefaultTheme/Views/ResultBox.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/ResultBox.cshtml
@@ -22,7 +22,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-9 col-lg-6 ml-auto mr-auto">
+        <div class="text-center col-padding-low">
             <div class="media border border-secondary rounded p-4">
                 <i class="@iconClass"></i>
                 <div class="media-body">
