manage change password

--- a/src/Themes/KrakeDefaultTheme/Views/ResultBox.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/ResultBox.cshtml
@@ -35,7 +35,7 @@
                         </div>
                     }
                     @if (Model.ButtonLink != null && Model.ButtonText != null) {
-                        <a href='@Model.ButtonLink' class='btn btn-outline-dark'>@Model.ButtonText</a>
+                        <a href='@Model.ButtonLink' class='btn btn-primary'>@Model.ButtonText</a>
                     }
                 </div>
             </div>
