--- a/src/Themes/KrakeDefaultTheme/Views/MessagePage.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/MessagePage.cshtml
@@ -13,7 +13,7 @@
 }
 
 <div class="fullscreen accounts-page">
-    <div class="d-flex align-items-center text-center particle-content">
+    <div class="d-flex align-items-center text-center particle-content col-padding-low">
         <div class="container">
             <div class="row">
                 <div class=" col-md-12">
