--- a/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/LostPassword.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/LostPassword.cshtml
@@ -2,4 +2,4 @@
     Layout.Title = Html.TitleForPage(T("Change Password").ToString());
 }
 
-@Display.PasswordChangeForm(LoggedUser: true)
+@Display.PasswordChangeForm(LoggedUser: false)
